--- a/contact_us.css
+++ b/contact_us.css
@@ -12,8 +12,8 @@ p {
 
 .scroll-hidden {
     opacity: 0;
-    transform: translateX(100px); 
-    transition: all 2s ease-out;
+    transform: scaleY(0.5); 
+    transition: all 1s ease-out;
 }
 
 .scroll-hidden1 {
@@ -22,15 +22,11 @@ p {
     transition: all 2s ease-out;
 }
 
-.scroll-hidden2 {
-    opacity: 0;
-    transform: rotate(30deg); 
-    transition: all 2s ease-out;
-}
+
 
 .scroll-visible {
     opacity: 1;
-    transform: translateX(0) rotate(0deg) scale(1); 
+    transform: scale(1); 
 }
 .green {
     color: #41C757;
