--- a/our_company.css
+++ b/our_company.css
@@ -8,7 +8,7 @@ body {
 
 .scroll-hidden {
     opacity: 0;
-    transform: translateX(100px); 
+    transform: translateY(100px); 
     transition: all 2s ease-out;
 }
 
@@ -20,7 +20,7 @@ body {
 
 .scroll-visible {
     opacity: 1;
-    transform: translateX(0) scale(1); 
+    transform: translateY(0) scale(1); 
 }
 
 .green {
