--- a/service.css
+++ b/service.css
@@ -8,20 +8,22 @@ body {
 
 .scroll-hidden {
     opacity: 0;
-    transform: translateX(100px); 
+    clip-path: inset(0 100% 0 0);
     transition: all 2s ease-out;
 }
 
 .scroll-hidden1 {
     opacity: 0;
-    transform: translateX(-100px); 
+    clip-path: inset(0 0 0 100%); 
     transition: all 2s ease-out;
 }
 
+
 .scroll-visible {
     opacity: 1;
-    transform: translateX(0); 
+    clip-path: inset(0 0 0 0); 
 }
+
 
 .green {
     color: #41C757;
