--- a/v_m_v.css
+++ b/v_m_v.css
@@ -6,15 +6,9 @@ body {
     padding: 0;
 }
 
-.scroll-hidden {
-    opacity: 0;
-    transform: translateX(100px); 
-    transition: all 2s ease-out;
-}
-
 .scroll-hidden1 {
     opacity: 0;
-    transform: translateX(-100px); 
+    transform: translateY(-100px); 
     transition: all 2s ease-out;
 }
 
