--- a/index.css
+++ b/index.css
@@ -11,19 +11,19 @@ p, a {
 
 .scroll-hidden {
     opacity: 0;
-    transform: scaleX(0.8); 
-    transition: all 1s ease-out;
+    transform: translateX(100px) scale(0.7); 
+    transition: all 2s ease-out;
 }
 
 .scroll-hidden1 {
     opacity: 0;
-    transform: scaleX(0.8); 
-    transition: all 1s ease-out;
+    transform: translateX(-100px) scale(0.7); 
+    transition: all 2s ease-out;
 }
 
 .scroll-visible {
     opacity: 1;
-    transform: scaleX(1); 
+    transform: translateX(0) scale(1); 
 }
 
 #home {
