--- a/career.css
+++ b/career.css
@@ -1,6 +1,4 @@
-html {
-    overflow-x: hidden;
-}
+
 
 body {
     position: relative;
@@ -8,27 +6,29 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    width: 100vw;
     overflow-x: hidden;
 }
 
 
 .scroll-hidden {
     opacity: 0;
-    transform: translateX(100px);
-    transition: all 2s ease-out;
+    transform: scaleX(0.8);
+    transition: all 2s ease-out, opacity 2s ease-out;
+    overflow-x: hidden;
 }
 
 .scroll-hidden1 {
     opacity: 0;
-    transform: translateX(-100px);
-    transition: all 2s ease-out;
+    transform: scaleY(0.8);
+    transition: all 2s ease-out, opacity 2s ease-out;
+    overflow-x: hidden;
 }
 
 
 .scroll-visible {
     opacity: 1;
-    transform: translateX(0px);
+    transform: scale(1);
+    
 }
 
 
