--- a/index.css
+++ b/index.css
@@ -1,6 +1,4 @@
-html {
-    overflow-x: hidden;
-}
+
 
 body {
     position: relative;
@@ -8,7 +6,6 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
 }
 p, a {
     font-size: 18px;
@@ -16,19 +13,19 @@ p, a {
 
 .scroll-hidden {
     opacity: 0;
-    transform: translateX(100px) scale(0.7); 
+    transform: scale(0.7); 
     transition: all 2s ease-out;
 }
 
 .scroll-hidden1 {
     opacity: 0;
-    transform: translateX(-100px) scale(0.7); 
+    transform: scale(0.7); 
     transition: all 2s ease-out;
 }
 
 .scroll-visible {
     opacity: 1;
-    transform: translateX(0) scale(1); 
+    transform: scale(1); 
 }
 
 #home {
