--- a/service.css
+++ b/service.css
@@ -63,7 +63,7 @@ h3.serviceh3 {
 .serviceh3::after {
     content: '';
     display: block;
-    width: 300px;
+    width: 250px;
     height: 5px;
     background-color: #28a745;
 }
@@ -83,6 +83,7 @@ p.service-provide {
 
 .service-item {
     flex: 0 1 calc(13% - 20px);
+    min-width: 150px;
     height: 125px;
     background-color: transparent;
     text-align: center;
@@ -160,6 +161,7 @@ a {
     /* Space between image and text */
     position: relative;
     /* For absolute positioning of line */
+    /* border: #4f4f4f6e 2px solid; */
 }
 
 .service-card img {
@@ -360,5 +362,68 @@ a {
 
     100% {
         transform: translateX(-50%);
+    }
+}
+
+@media (max-width :850px) {
+    .services-grid {
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+        margin-top: 50px;
+
+    }
+    .service-item {
+        flex: 0 1 calc(15% - 20px);
+        min-width: 120px;
+        height: 125px;
+        background-color: transparent;
+        text-align: center;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        box-sizing: border-box;
+        flex-grow: 1;
+    }
+    .panda-icon {
+        position: absolute;
+        right: 0;
+        bottom: 200px;
+        width: 15vw;
+        height: auto;
+    }
+}
+
+
+
+
+
+@media (max-width :475px) {
+    .services-grid {
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+        margin-top: 50px;
+        /* margin-top: 60px;
+        margin-left: 100px; */
+    }
+
+    .service-item {
+        flex: 0 1 calc(13% - 20px);
+        min-width: 0px;
+        height: 125px;
+        background-color: transparent;
+        text-align: center;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        box-sizing: border-box;
+        flex-grow: 1;
     }
 }
