--- a/service.css
+++ b/service.css
@@ -12,20 +12,20 @@ body {
 
 .scroll-hidden {
     opacity: 0;
-    clip-path: inset(0 100% 0 0);
+    transform: scale(0.5);
     transition: all 2s ease-out;
 }
 
 .scroll-hidden1 {
     opacity: 0;
-    clip-path: inset(0 0 0 100%); 
+    transform: scale(0.5);
     transition: all 2s ease-out;
 }
 
 
 .scroll-visible {
     opacity: 1;
-    clip-path: inset(0 0 0 0); 
+    transform: scale(1);
 }
 
 
@@ -267,8 +267,11 @@ a {
     width: 65%;
 }
 
-#finance-section, #legacy-section,#claim-section {
-    scroll-margin-top: 30vh; /* 保证 section 在垂直方向的视窗中间 */
+#finance-section,
+#legacy-section,
+#claim-section {
+    scroll-margin-top: 30vh;
+    /* 保证 section 在垂直方向的视窗中间 */
 }
 
 
@@ -365,6 +368,21 @@ a {
     }
 }
 
+@media (max-width :1000px) {
+    .container-item {
+        flex-direction: column;
+        padding: unset;
+        padding: 50px 2.5vw;
+        width: 95%;
+    }
+
+    .right-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 @media (max-width :850px) {
     .services-grid {
         display: flex;
@@ -373,6 +391,7 @@ a {
         margin-top: 50px;
 
     }
+
     .service-item {
         flex: 0 1 calc(15% - 20px);
         min-width: 120px;
@@ -388,6 +407,7 @@ a {
         box-sizing: border-box;
         flex-grow: 1;
     }
+
     .panda-icon {
         position: absolute;
         right: 0;
@@ -395,7 +415,49 @@ a {
         width: 15vw;
         height: auto;
     }
+
+
 }
+
+@media (max-width :600px) {
+
+    .line-start {
+        content: '';
+        position: absolute;
+        top: -0.4%;
+        left: 10%;
+        right: 10%;
+        height: 8px;
+        width: 80%;
+        background-color: #28a745;
+    }
+
+    .left-column {
+        flex-basis: 30%; 
+        width: 100%;
+    }
+
+    .right-column {
+        flex-basis: 65%;
+        width: 100%;
+    }
+
+    .left-column img {
+        width: 60%;
+    }
+
+    .line-center {
+        display: none;
+    }
+
+    .service-card {
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+}
+
 
 
 
