--- a/contact_us.css
+++ b/contact_us.css
@@ -127,12 +127,16 @@ p.service-provide {
     justify-content: center;
 }
 
-.enquiry_content {
-    width: 35%;
+.enquiry_content, .form {
+    width: 35%; /* 左右各占35% */
     position: relative;
+}
+
+.enquiry_content {
     display: flex;
     flex-wrap: nowrap;
     z-index: 1;
+    transform: translateX(5%);
 }
 
 .enquiry_content_bg {
@@ -184,8 +188,7 @@ p.service-provide {
 }
 
 .form {
-    transform: translateX(-10%);
-    width: 35%;
+    transform: translateX(-5%);
     background: white;
     box-shadow: 0px 0px 63.2px 10px rgba(0, 0, 0, 0.25);
     z-index: 0;
@@ -305,3 +308,79 @@ p.service-provide {
     width: 50%;
 }
 
+@media (max-width :1000px) {
+    .enquiry_content {
+        width: 45%;
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        z-index: 1;
+    }
+
+    .enquiry_content_bg {
+        width: 90%;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background: #44BE97;
+        box-shadow: 0px 0px 63.2px 10px rgba(0, 0, 0, 0.25);
+    }
+
+    .form {
+        transform: translateX(-5%);
+        width: 45%;
+        background: white;
+        box-shadow: 0px 0px 63.2px 10px rgba(0, 0, 0, 0.25);
+        z-index: 0;
+    }
+}
+
+@media (max-width :800px) {
+    .address_content {
+        width: 70%;
+        position: relative;
+        display: flex;
+        background-color: rgb(255, 255, 255);
+        align-items: center;
+        justify-content: center;
+        top: -70px;
+        z-index: 1;
+    }
+    
+    .address_content img {
+        margin: 10px 10px;
+        width: 8vw;
+    }
+    
+    .address_content p {
+        text-align: center;
+        line-height: 1.3;
+    }
+
+    .enquiry {
+        flex-direction: column; /* 改为列方向排列 */
+        align-items: center; /* 内容居中对齐 */
+    }
+
+    .enquiry_content, .form {
+        transform: translateX(0%);
+        width: 80%; /* 改变宽度适应小屏幕 */
+    }
+
+}
+
+@media (max-width :475px) {
+    .address_content {
+        width: 100%;
+        box-shadow: 0 10px 50px rgba(0, 0, 0, 0.1);
+        top: 0;
+        z-index: 0;
+    }
+
+    .address iframe {
+        position: relative;
+        width: 90%;
+        height: 400px;
+        top: 0;
+        z-index: 0;
+    }
+}
