--- a/v_m_v.css
+++ b/v_m_v.css
@@ -173,6 +173,23 @@ body {
     margin-bottom: 10%;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #3A67B1;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #3A67B1;
+}
+
 @media (max-width :1150px) {
     .v_m_v_title h2::before {
         display: none;
