--- a/contact_us.css
+++ b/contact_us.css
@@ -16,13 +16,13 @@ p {
 
 .scroll-hidden {
     opacity: 0;
-    transform: scaleY(0.5); 
+    transform: scaleY(0.5);
     transition: all 1s ease-out;
 }
 
 .scroll-hidden1 {
     opacity: 0;
-    transform: scale(0.5); 
+    transform: scale(0.5);
     transition: all 2s ease-out;
 }
 
@@ -30,8 +30,9 @@ p {
 
 .scroll-visible {
     opacity: 1;
-    transform: scale(1); 
+    transform: scale(1);
 }
+
 .green {
     color: #41C757;
 }
@@ -89,10 +90,11 @@ p.service-provide {
 .address {
     position: relative;
     display: flex;
-    flex-wrap: wrap;    
+    flex-wrap: wrap;
     justify-content: center;
 
 }
+
 .address_content {
     width: 50%;
     position: relative;
@@ -127,8 +129,10 @@ p.service-provide {
     justify-content: center;
 }
 
-.enquiry_content, .form {
-    width: 35%; /* 左右各占35% */
+.enquiry_content,
+.form {
+    width: 35%;
+    /* 左右各占35% */
     position: relative;
 }
 
@@ -184,7 +188,8 @@ p.service-provide {
     position: absolute;
     width: 50px;
     height: 50px;
-    background: linear-gradient(135deg, #44BE97 0%, #44BE97 50%, rgba(255, 255, 255, 0) 50%);    bottom: 0px;
+    background: linear-gradient(135deg, #44BE97 0%, #44BE97 50%, rgba(255, 255, 255, 0) 50%);
+    bottom: 0px;
 }
 
 .form {
@@ -212,11 +217,13 @@ p.service-provide {
     width: 100%;
     height: 100%;
     display: flex;
-    z-index: -1; /* 设置更低的 z-index */
-    pointer-events: none; /* 让它不响应鼠标事件 */
+    z-index: -1;
+    /* 设置更低的 z-index */
+    pointer-events: none;
+    /* 让它不响应鼠标事件 */
 }
 
-.team_rec_container{
+.team_rec_container {
     display: flex;
     background: linear-gradient(90deg, #F4FEFF 31.49%, #3A67B1 31.5%, #3A67B1 100%);
     box-shadow: 10px 0px 10px rgba(0, 0, 0, 0.25);
@@ -233,7 +240,8 @@ p.service-provide {
     height: 100%;
 }
 
-.team_tri_container .team_tri1,  .team_tri_container .team_tri2{
+.team_tri_container .team_tri1,
+.team_tri_container .team_tri2 {
     width: 0;
     height: 0;
     border-left: 50px solid transparent;
@@ -277,13 +285,13 @@ p.service-provide {
 
 .all_team {
     z-index: 10;
-    margin: 50px 5%;
-    width: 90%;
+    margin: 10px 3%;
+    /* width: 90%; */
     height: 550px;
     position: relative;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    /* justify-content: center; */
     overflow-y: scroll;
 }
 
@@ -293,7 +301,9 @@ p.service-provide {
     flex-wrap: wrap;
     width: 40%;
     margin: 20px 40px;
+    min-width: 480px;
 }
+
 .team_photo {
     width: 40%;
 }
@@ -306,6 +316,23 @@ p.service-provide {
 .team_info {
     margin: 20px;
     width: 50%;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #3A67B1;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #3A67B1;
 }
 
 @media (max-width :1000px) {
@@ -345,27 +372,68 @@ p.service-provide {
         top: -70px;
         z-index: 1;
     }
-    
+
     .address_content img {
         margin: 10px 10px;
         width: 8vw;
     }
-    
+
     .address_content p {
         text-align: center;
         line-height: 1.3;
     }
 
     .enquiry {
-        flex-direction: column; /* 改为列方向排列 */
-        align-items: center; /* 内容居中对齐 */
+        flex-direction: column;
+        /* 改为列方向排列 */
+        align-items: center;
+        /* 内容居中对齐 */
     }
 
-    .enquiry_content, .form {
+    .enquiry_content {
         transform: translateX(0%);
-        width: 80%; /* 改变宽度适应小屏幕 */
+        width: 80%;
+        justify-content: center;
     }
 
+    .enquiry_content_bg {
+        width: 100%;
+    }
+
+    .triangle_container {
+        display: none;
+    }
+
+    .form {
+        transform: translateX(0%);
+        height: 500px;
+        width: 70%;
+    }
+
+}
+
+@media (max-width :550px) {
+    .team_member {
+        flex-direction: column;
+        align-items: center;
+        width: 90%;
+        margin: 10px auto;
+        min-width: 0%;
+    }
+
+    .team_photo {
+        margin-bottom: 10px;
+    }
+
+    .team_info {
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    .team_photo img {
+        width: 100%;
+        height: auto;
+    }
 }
 
 @media (max-width :475px) {
@@ -382,5 +450,18 @@ p.service-provide {
         height: 400px;
         top: 0;
         z-index: 0;
+    }
+
+    .enquiry {
+        margin-top: 100px;
+    }
+
+    .enquiry_content {
+        width: 90%;
+    }
+
+    .form {
+        height: 500px;
+        width: 80%;
     }
 }
