--- a/our_company.css
+++ b/our_company.css
@@ -164,6 +164,23 @@ p, a {
     text-align: justify;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #3A67B1;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #3A67B1;
+}
+
 @media (max-width :1400px) {
     .ourcompany_background {
         width: 100%;
