--- a/index.css
+++ b/index.css
@@ -128,6 +128,13 @@ p, a {
     border-radius: 10px;
 }
 
+.carousel-item video {
+    display: block;
+    margin: auto;
+    width: 90%;
+    border-radius: 10px;
+}
+
 input[type="radio"] {
     display: none;
 }
