--- a/index.css
+++ b/index.css
@@ -794,50 +794,103 @@ iframe {
     z-index: 1;
     margin: 10px 15px;
 }
-                
+
 .slide {
     position: relative;
-    min-width: 280px; 
+    min-width: 280px;
     height: 200px;
-    margin-right: 15px;
+    margin-right: 50px;
     padding: 10px;
     text-align: center;
 }
-img .avatar, .design, .tri, .f {
-    position: absolute;
-}
+
 .fbcomment {
     position: relative;
-    width: 270;
+    width: 300px;
     height: 190px;
-    background: white;
-    border-radius: 30px;
+    background: #F1F9FF;
+    border-radius: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    overflow: hidden;
+    /* overflow: hidden; */
+    border: #247FF2 6px solid;
 }
 
 .fbcomment h3 {
-    width: 100%;
-    height: fit-content;
-    background-color: #3A67B1;
-    border-radius: 30px 30px 0 0 ;
+    display: flex;
+    position: absolute;
+    width: 104%;
+    height: 12%;
+    background: linear-gradient(90deg, #1877F2 0%, #1877F2 49.5%, #FFFFFF 100%);
+    border-radius: 20px 20px 0 0;
     color: white;
+    align-items: center;
+    justify-content: center;
     margin: unset;
     padding: 10px 0;
+    transform: translateY(-30%);
+}
+
+.avatar img {
+    position: absolute;
+    transform: translateY(-30%);
+    left: 0;
+    margin: 2px 0 0 2px;
+    /* transform: translateX(20%); */
+    width: 18%;
+    height: auto;
+    border: 6px solid #1877F2;
+    border-radius: 116px;
+}
+
+.like_good img {
+    position: absolute;
+    width: 30%;
+    height: auto;
+    top: 0;
+    transform: translateX(260%);
+    margin: unset;
 }
 
 .fbc {
+    display: flex;
     text-align: justify;
-    margin: 2%;
-    width: 80%;
-    height: 65%;
+    width: 90%;
+    height: 75%;
     overflow: hidden scroll;
+    margin-top: 10%;
 }
+
+.fbc p {
+    margin: unset;
+    margin: 10% 5px 0 5px;
+}
+
 .fbc::-webkit-scrollbar {
     width: 2px;
 }
+
+.design {
+    position: absolute;
+    display: flex;
+    width: 103.73%;
+    height: 10%;
+    background: linear-gradient(90deg, #1877F2 0%, #1877F2 40%, #F1F9FF 40%, #F1F9FF 50%, #1877F2 50%, #1877F2 60%, #F1F9FF 60.21%, #F1F9FF 70%, #1877F2 70%, #1877F2 80%, #F1F9FF 80%, #F1F9FF 90%, rgba(24, 119, 242, 0.941176) 90% , rgba(24, 119, 242, 0.941176) 100%);
+    border-radius: 0 0 10px 10px;
+    bottom: 0;
+    transform: translateY(37%);
+    align-items: center;
+    justify-content: left;
+    color: white;
+    font-weight: 900;
+}
+
+.design p{
+    padding-left: 5%;
+}
+
+
 
 @media (max-width :1450px) {
     .iframe-slider {
